tests/models/struct/unnamed/i128/fail/min_items.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_items = 2)]
    i128
);
fn main() {}
